<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">M&amp;S Gift Registry</string>
    <string name="action_settings">Settings</string>
    <string name="scan">Scan</string>
    <string name="sign_up_now">Sign Up Now!</string>
    <string name="planning"><u>Planning</u></string>
    <string name="calculator">Calculator</string>
    <string name="clothing">Clothing</string>
    <string name="essentials">Essentials</string>
    <string name="baby_shower">Baby Shower</string>
    <string name="view_demo_app">View a demo app</string>
    <string name="event_host">Event Host</string>
    <string name="event_guest">Event Guest</string>
    <string name="add_list">Create List</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="your_lists"><u>My Lists</u></string>
    <string name="invited_lists">Lists You\'ve Been Invited To</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="register_me">Sign up for an M&amp;S account</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>My Lists</item>
        <item>Scanner</item>
        <item>Events</item>
        <item>Logout</item>
       <!--  <item>What\'s Hot</item> -->
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home_01</item>
        <item>@drawable/mylists_02</item>
        <item>@drawable/qrscanner_03</item>
        <item>@drawable/events_04</item>
        <item>@drawable/logout_05</item>
<!--         <item>@drawable/ic_whats_hot</item>
 -->    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>