<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:textColor="#999999"
        android:textSize="25dip"
        android:textStyle="bold"
        android:text = "@string/your_lists" />
    
    <View
    android:layout_width="fill_parent"
    android:layout_height="1dp"
    android:background="@android:color/darker_gray"/>
    
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:textColor="#999999"
        android:textSize="25dip"
        android:textStyle="bold"
        android:text = "@string/invited_lists" />

   <Button android:id="@+id/addList_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_list" />

</LinearLayout>