<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/your_lists"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:text="@string/your_lists"
        android:textColor="#999999"
        android:textSize="25dip"
        android:textStyle="bold" />

    <ListView
        android:id="@id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/your_lists" >
    </ListView>

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@id/android:list"
        android:layout_centerVertical="true"
        android:background="#9dc8e0" />

    <View
        android:id="@+id/separator"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_below="@id/android:list"
        android:layout_centerVertical="true"
        android:background="#9dc8e0" />

    <Button
        android:id="@+id/addList_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="13dp"
        android:text="@string/add_list" />

    <ListView
        android:id="@+id/android:liist"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_above="@+id/addList_button"
        android:layout_alignParentLeft="true" >
    </ListView>

    <TextView
        android:id="@+id/invited_lists"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:padding="10dip"
        android:text="@string/invited_lists"
        android:textColor="#999999"
        android:textSize="25dip"
        android:textStyle="bold" />

</RelativeLayout>