<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="horizontal" >

    <GridLayout
        android:id="@+id/Stork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="1" >

        <GridLayout
            android:id="@+id/baby_cloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="1" >

            <Button
                android:id="@+id/button1"
                android:layout_column="0"
                android:layout_gravity="left|center_vertical"
                android:layout_marginBottom="170dp"
                android:layout_marginLeft="10dp"
                android:layout_row="0"
                android:text="@string/view_demo_app" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="134dp"
                android:layout_column="0"
                android:layout_gravity="center"
                android:layout_row="0"
                android:paddingBottom="0dp"
                android:paddingLeft="0dp"
                android:paddingRight="220dp"
                android:src="@drawable/hampers_btn" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="114dp"
                android:layout_column="0"
                android:layout_gravity="center"
                android:layout_row="0"
                android:src="@drawable/gifts_btn" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="114dp"
                android:layout_column="0"
                android:layout_gravity="right|center_vertical"
                android:layout_row="0"
                android:src="@drawable/items_btn" />

            <TextView
                android:id="@+id/textView1"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_row="0"
                android:paddingBottom="150dp"
                android:paddingRight="200dp"
                android:text="@string/planning"
                android:textSize="18sp" 
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left|top"
                android:layout_row="0"
                android:paddingBottom="350dp"
                android:paddingLeft="150dp"
                android:paddingTop="10dp"
                android:src="@drawable/stork" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="104dp"
                android:layout_height="0dp"
                android:layout_column="0"
                android:layout_gravity="left|bottom"
                android:layout_row="0"
                android:src="@drawable/calculator" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="0dp"
                android:layout_height="166dp"
                android:layout_column="0"
                android:layout_gravity="left|bottom"
                android:layout_row="0"
                android:src="@drawable/calculator" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="0dp"
                android:layout_height="143dp"
                android:layout_column="0"
                android:layout_gravity="left|bottom"
                android:layout_row="0"
                android:src="@drawable/calculator" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="80dp"
                android:layout_height="151dp"
                android:layout_column="0"
                android:layout_gravity="left|bottom"
                android:layout_row="0"
                android:paddingBottom="125dp"
                android:paddingLeft="20dp"
                android:src="@drawable/calculator" />

            <TextView
                android:id="@+id/textView2"
                android:layout_column="0"
                android:layout_gravity="left|bottom"
                android:layout_row="0"
                android:paddingBottom="130dp"
                android:paddingLeft="70dp"
                android:text="@string/calculator" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="70dp"
                android:layout_height="122dp"
                android:layout_column="0"
                android:layout_gravity="left|bottom"
                android:layout_row="0"
                android:paddingBottom="100dp"
                android:paddingLeft="30dp"
                android:src="@drawable/clothing" />

            <TextView
                android:id="@+id/textView3"
                android:layout_column="0"
                android:layout_gravity="left|bottom"
                android:layout_row="0"
                android:paddingBottom="103dp"
                android:paddingLeft="70dp"
                android:text="@string/clothing" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="76dp"
                android:layout_height="98dp"
                android:layout_column="0"
                android:layout_gravity="left|bottom"
                android:layout_row="0"
                android:paddingBottom="70dp"
                android:paddingLeft="21dp"
                android:src="@drawable/essentials" />

            <TextView
                android:id="@+id/textView4"
                android:layout_column="0"
                android:layout_gravity="left|bottom"
                android:layout_row="0"
                android:paddingBottom="75dp"
                android:paddingLeft="70dp"
                android:text="@string/essentials" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="60dp"
                android:layout_height="83dp"
                android:layout_column="0"
                android:layout_gravity="left|bottom"
                android:layout_row="0"
                android:paddingBottom="20dp"
                android:paddingLeft="37dp"
                android:paddingRight="2dp"
                android:src="@drawable/baby_shower" />

            <TextView
                android:id="@+id/textView5"
                android:layout_column="0"
                android:layout_gravity="left|bottom"
                android:layout_row="0"
                android:paddingBottom="45dp"
                android:paddingLeft="70dp"
                android:text="@string/baby_shower" />

        </GridLayout>

    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_now" />

</LinearLayout>
